# serializer version: 1
# name: TestContract.test_should_return_same_hash_in_different_processes[column]
  8162512882156938440
# ---
# name: TestContract.test_should_return_same_hash_in_different_processes[constant]
  4610312201483200147
# ---
